--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,54 @@
     transform: rotate(360deg);
   }
 }
+
+body{
+  background-color: rgb(100, 99, 99);
+  display: flex;
+  padding: 10%;
+  align-items: center;
+  justify-content: center;
+}
+
+.container{
+  padding: 10%;
+  border: 2px solid whitesmoke;
+  width: 500px;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  color: rgb(255, 255, 255);
+}
+
+.head{
+  font-weight:600;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+input{
+  padding: 10px;
+  margin-top: 20px;
+  border: 1px solid black;
+  border-radius: 10px;
+  width: 90%;
+}
+
+input:hover{
+  background-color: rgb(240, 217, 170);
+}
+
+input:focus{
+  border: 0px;
+  background-color: beige;
+}
+
+button{
+  border: 2px solid rgb(0, 0, 0);
+  width: 20%;
+  height: 40px;
+  border-radius: 8px;
+  font-weight:600;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
